# llm-cost-tracker

./: .automation-scope.yaml  .dockerignore  .editorconfig  .env.example  .env.production.example  .env.test  .gitattributes  .gitignore  .pre-commit-config.yaml  .releaserc.json  .yamllint.yaml  ARCHITECTURE.md  AUTONOMOUS_ENHANCEMENT_REPORT.md  AUTONOMOUS_SDLC_COMPLETE.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_ENHANCEMENT_COMPLETE.md  AUTONOMOUS_SDLC_ENHANCEMENT_SUMMARY.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  AUTONOMOUS_SDLC_IMPLEMENTATION_COMPLETE.md  AUTONOMOUS_SDLC_MASTER_COMPLETION_FINAL.md  AUTONOMOUS_SDLC_QUANTUM_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_QUANTUM_ENHANCEMENT_COMPLETE.md  AUTONOMOUS_SDLC_QUANTUM_RESEARCH_PUBLICATION.md  AUTONOMOUS_SDLC_RESEARCH_PUBLICATION.md  AUTONOMOUS_SYSTEM.md  AUTONOMOUS_VALUE_DISCOVERY_SETUP.md  CHANGELOG.md  CHECKPOINT_A1_VALIDATION_REPORT.md  CITATION.cff  CI_WORKFLOW.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.production  FINAL_AUTONOMOUS_SDLC_COMPLETION_REPORT.json  FINAL_AUTONOMOUS_SDLC_METRICS.json  FINAL_SDLC_ACTIVATION_GUIDE.md  GENERATION_4_AUTONOMOUS_SDLC_REPORT.md  LICENSE_HEADER.txt  (+105 more)
.devcontainer/: Dockerfile  bashrc  devcontainer.json  docker-compose.yml  post-create.sh  post-start.sh  setup.sh
.github/: CODEOWNERS  DEVELOPER_ONBOARDING.md  FUNDING.yml  SECURITY.md  WORKFLOW_SETUP_GUIDE.md  dependabot.yml  project-metrics.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflow-templates/: README.md  main-ci.yml  pr-validation.yml.template  release.yml  sbom-generation.yml
.github/workflows/: README.md  release.yml  repo-hygiene-bot.yml  security-scan.yml  security-scanning.yml  semantic-release.yml
.terragon/: BACKLOG.md  autonomous-executor.py  config.yaml  current-status.md  perpetual-loop.py  value-discovery-engine.py
config/: alert-rules.yml  alertmanager.yml  budget-rules.yml  grafana-datasources.yml  otel-collector.yaml  prometheus.yml  recording-rules.yml
dashboards/: llm-cost-dashboard.json
docs/: API_REFERENCE.md  COMPLIANCE.md  DEVELOPMENT.md  PERFORMANCE.md  QUANTUM_ARCHITECTURE.md  ROADMAP.md  SETUP_REQUIRED.md
docs/adr/: README.md  adr-0001-opentelemetry-metrics.md  adr-0002-postgres-storage.md  adr-0003-docker-compose.md  template.md
docs/guides/: README.md  admin-automation.md  admin-monitoring.md  developer-deployment.md  developer-testing.md
docs/runbooks/: README.md  high-cost-alerts.md
docs/workflows/: MANUAL_SETUP_INSTRUCTIONS.md  README.md
examples/: README.md  requirements.txt  streamlit_demo.py
scripts/: build.sh  ci-validate.sh  deploy.sh  dev-setup.sh  generate-sbom.sh  metrics-collector.py  performance-benchmark.py  production-deploy.sh  quality_gates.py  repo_hygiene_bot.py  repository-automation.py  security-audit.sh  setup-git-rerere.sh  test_alerts.py  validate-sdlc-implementation.py
sql/: init.sql
src/llm_cost_tracker/: cli.py  (+55 more)
tests/: __init__.py  conftest.py  test_adaptive_quantum_mesh.py  test_autonomous_benchmark_framework.py  test_database.py  test_integration_comprehensive.py  test_main.py  test_quantum_neural_evolution.py  test_quantum_task_planner.py  test_quantum_variational_hybrid.py  test_security.py  test_sentiment_analyzer.py  test_sentiment_performance.py  test_sentiment_security.py
workflow-configs-ready-to-deploy/: pr-validation.yml  security-scan.yml
(+28 files in other folders)
