[tool.poetry]
name = "llm-cost-tracker"
version = "0.1.0"
description = "A self-hostable OpenTelemetry collector and rules engine for LLM cost tracking"
authors = ["Terragon Labs <contact@terragonlabs.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "llm_cost_tracker", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-exporter-otlp = "^1.21.0"
opentelemetry-instrumentation = "^0.42b0"
langchain = "^0.1.0"
langchain-core = "^0.1.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
asyncpg = "^0.29.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
pyyaml = "^6.0.1"
aiofiles = "^23.2.1"
httpx = "^0.25.0"
streamlit = "^1.28.0"
litellm = "^1.0.0"
prometheus-client = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.10.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/llm_cost_tracker --cov-report=html --cov-report=term"