[tool.poetry]
name = "llm-cost-tracker"
version = "0.1.0"
description = "A self-hostable OpenTelemetry collector and rules engine for LLM cost tracking"
authors = ["Terragon Labs <contact@terragonlabs.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "llm_cost_tracker", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-exporter-otlp = "^1.21.0"
opentelemetry-instrumentation = "^0.42b0"
langchain = "^0.1.0"
langchain-core = "^0.1.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
asyncpg = "^0.29.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
pyyaml = "^6.0.1"
aiofiles = "^23.2.1"
httpx = "^0.25.0"
streamlit = "^1.28.0"
litellm = "^1.0.0"
prometheus-client = "^0.19.0"
typer = "^0.9.0"
rich = "^13.7.0"
click = "^8.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-benchmark = "^4.0.0"
pytest-xdist = "^3.5.0"
pytest-timeout = "^2.2.0"
black = "^23.10.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
flake8-docstrings = "^1.7.0"
flake8-bugbear = "^23.12.0"
flake8-comprehensions = "^3.14.0"
flake8-simplify = "^0.21.0"
mypy = "^1.7.0"
types-PyYAML = "^6.0.12"
types-requests = "^2.31.0"
bandit = "^1.7.5"
safety = "^2.3.0"
pre-commit = "^3.5.0"
httpx = "^0.25.0"
psutil = "^5.9.0"

[tool.poetry.scripts]
backlog = "llm_cost_tracker.cli:app"
llm-cost-tracker = "llm_cost_tracker.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/llm_cost_tracker --cov-report=html --cov-report=term"